# phil-arg-mining

./: .gitignore  LICENSE  README.md  TODO.md  config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  snowball.md
apps/: __readme__
datasets/: __readme__
datasets/interim/: __readme__
datasets/interim/papers/: __readme__
datasets/processed/: __readme__
datasets/processed/papers/: __readme__
datasets/raw/papers/: __readme__
figures/: __readme__
figures/phil_papers/: morality_ethics_categories.txt
figures/phil_papers/dataset/: missing_files.json
models/: __readme__
models/argmining_en_ari_aif_roberta_l/: README.md  config.json  tokenizer_config.json
models/roberta_argument/: config.json  flax_model.msgpack  tf_model.h5
models/sam_adur_are_sciarg/: __readme__  config.bak.json  config.json  taskmodule_config.bak.json  taskmodule_config.json
models/sam_adur_sciarg/: config.json  taskmodule_config.json
models/sam_are_sciarg/: config.json  taskmodule_config.json
models/scibert_scivocab_uncased/: __readme__  config.json
scripts/: __init__.py  __readme__  annotations.py  docling.py  grobid.py  metadata.py  parse_logs_for_ETA.py  pdfs.py  run_adur.py  run_are.py  snowball_phase1_ADUR_ARE_generate.py  snowball_phase1_pipeline2_3_eval.py  snowball_phase_1.py  snowball_phase_1_E2E_eval.py  snowball_phase_1_e2e_eval.py  snowball_phase_1_generate.py
src/moralkg/: README.md  __init__.py  __readme__  config.py  logging.py
tests/: test_adur_are_pipeline.py  test_checkpoints.py  test_models_registry.py  test_prompts_loader.py
(+949 files in other folders)
